$Id$

Wishlist for future features
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

-> see bottom of this document


MIDIboxSEQ V4.0beta27
~~~~~~~~~~~~~~~~~~~~~

  o fixed a crash on rescheduled notes (caused by a gcc bug) - this bug only exists in beta26

  o BLM keyboard mode: now inverted (lowest button row plays highest velocity)

  o BLM keyboard mode takes octave/semitones transpose values into account


MIDIboxSEQ V4.0beta26
~~~~~~~~~~~~~~~~~~~~~

  o SD Card error messages will be sent to MIOS terminal

  o added MIOS terminal commands "play" and "stop", so that the sequencer can also be
    started/stopped from MIOS Studio

  o the status LED of the core module flashes on each beat now

  o bugfix for FAST button

  o OSC support for "Pianist Pro" format (an iPhone/iPad application)
    Now you can send notes and pitch changes from Pianist Pro to your
    MBSEQ, and convert them into MIDI events

  o support for a third MIDI IN/OUT port.
    The digital MIDI OUT signal (open drain!) is available at J5B.A6
    The digital MIDI IN signal is available at J5B.A7
    Note that the MIDI IO circuit (220 Ohm Resistors, optocoupler, etc.) is not
    part of the MBHP_CORE_STM32 module and has to be added externally.
    This IO port can especially be used for a dedicated BLM connection (this will
    be my personal usecase)

  o Gate #7 and #8, which were previously available at J5B.A6 and J5B.A7, are
    now available at J5C.A10 and J5C.A11


MIDIboxSEQ V4.0beta25
~~~~~~~~~~~~~~~~~~~~~

  o now each OSC port has an individual configuration set which consists of
    the Remote IP, Remote Port, Local Port and Transfer Mode

  o an OSC Transfer Mode has been added, it can be configured in the network
    configuration page for each OSC port.

    In MIDI mode, all events generated by the track will be embedded into a
    'm' type packet. This mode allows to tunnel MIDI events via ethernet to
    a proxy which runs on the host (or any device which is able to convert
    these messages)
