@@ -280,6 +280,8 @@ s32 SEQ_FILE_GC_Read(void)
 	    seq_core_metronome_note_m = value;
 	  } else if( strcmp(parameter, "MetronomeNoteB") == 0 ) {
 	    seq_core_metronome_note_b = value;
+	  } else if( strcmp(parameter, "PasteClrAll") == 0 ) {
+	    seq_core_options.PASTE_CLR_ALL = value;
 	  } else if( strcmp(parameter, "RemoteMode") == 0 ) {
 	    seq_ui_remote_mode = (value > 2) ? 0 : value;
 	  } else if( strcmp(parameter, "RemotePort") == 0 ) {
@@ -414,6 +416,9 @@ static s32 SEQ_FILE_GC_Write_Hlp(u8 write_to_file)
   FLUSH_BUFFER;
 
   sprintf(line_buffer, "MetronomeNoteB %d\n", (u8)seq_core_metronome_note_b);
+  FLUSH_BUFFER;
+
+  sprintf(line_buffer, "PasteClrAll %d\n", seq_core_options.PASTE_CLR_ALL);
   FLUSH_BUFFER;
 
   sprintf(line_buffer, "RemoteMode %d\n", (u8)seq_ui_remote_mode);
